; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ct_test.c_load_pem_cert.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ct_test.c_load_pem_cert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*)* @load_pem_cert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @load_pem_cert(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32* null, i32** %5, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @test_mk_file_path(i8* %8, i8* %9)
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load i8*, i8** %6, align 8
  %15 = call i32* @BIO_new_file(i8* %14, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %15, i32** %7, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load i32*, i32** %7, align 8
  %20 = call i32* @PEM_read_bio_X509(i32* %19, i32* null, i32* null, i32* null)
  store i32* %20, i32** %5, align 8
  br label %21

21:                                               ; preds = %18, %13
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @BIO_free(i32* %22)
  br label %24

24:                                               ; preds = %21, %2
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @OPENSSL_free(i8* %25)
  %27 = load i32*, i32** %5, align 8
  ret i32* %27
}

declare dso_local i8* @test_mk_file_path(i8*, i8*) #1

declare dso_local i32* @BIO_new_file(i8*, i8*) #1

declare dso_local i32* @PEM_read_bio_X509(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @OPENSSL_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
